--- a/src/content/blog/sih-2025-tips-and-common-mistakes.mdx
+++ b/src/content/blog/sih-2025-tips-and-common-mistakes.mdx
@@ -1,7 +1,7 @@
 ---
 title: SIH 2025 Tips and Common Mistakes - Insights from a 2022 Winner
 description: Learn from a Smart India Hackathon 2022 winner about critical tips for success and common mistakes to avoid in SIH 2025
-image: /blog/sih-2025-tips.png
+image: /blog/sih.png
 category: hackathon
 new: true
 createdAt: 2025-09-17
