--- a/src/content/blog/welcome.mdx
+++ b/src/content/blog/welcome.mdx
@@ -1,7 +1,7 @@
 ---
 title: Welcome to anishprashun.me
 description: A portfolio and blog showcasing my work as a Software Engineer and Team Leader with 5+ years of experience.
-image: /anish-og-image.png
+image: /blog/welcome.png
 createdAt: 2025-08-03
 updatedAt: 2025-08-03
 ---
